No grandes cambios.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
+
   <head>
     <title>Casas</title>
   </head>
   
   <body>
-    <p>Hello World!</p>
+    <p style="center">Hello World!</p>
   </body>
-  
 
 </html>
