Added more css things.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 
   <head>
     <title>Casas</title>
+    <style type="main.css"> </style>
   </head>
+
+  <header>
+        <p>Juan Casas</p>
+  </header>
   
   <body>
     <p>Hello World!</p>
