--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
   <head>
     <title>Casas</title>
-    <style type="main.css"> </style>
+    <link rel="stylesheet" href="main.css">
   </head>
 
   <header>
