--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
 
   <header>
-        <p>Juan Casas</p>
+        <p>Juan Casas, UNAM <br>
+            Facultad de Ciencias<br>
+                    CDMX</p>
         <p>This is the header.</p>
   </header>
   
