Added sidebar background.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
   </header>
   
   <body>
-    <p>Hello World!</p>
+
+    <div class="container">
+      <p>Hello World!</p>
+    </div>
+    
   </body>
 
 </html>
