--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
   </head>
 
   <header>
-        <p>Juan Casas, UNAM <br>
-            Facultad de Ciencias<br>
-                    CDMX</p>
-        <p>This is the header.</p>
+        
   </header>
   
   <body>
 
+
+    <div class="header">
+      <p>Juan Casas, UNAM <br>
+            Facultad de Ciencias<br>
+                    CDMX</p>
+        <p>This is the header.</p>
+    </div> 
     <div class="container">
       <p>Hello World!</p>
     </div>
