--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   </head>
 
   <header>
-        
+
   </header>
-  
+
   <body>
-    <div class="container">
+    <div class="container"> </div>
+    <div class="content">
       <p>Hello World!</p>
     </div>
     <div class="header">
@@ -19,7 +20,7 @@
                     CDMX</p>
         <p>This is the header.</p>
     </div>
-    
+
   </body>
 
 </html>
