--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
   </header>
 
   <body>
+
     <div class="container"> </div>
-    <div class="content">
-      <p>Hello World!</p>
-    </div>
-    <div class="header">
+    div class="header">
       <p>Juan Casas, UNAM <br>
             Facultad de Ciencias<br>
                     CDMX</p>
         <p>This is the header.</p>
     </div>
+    <div class="content">
+      <p>Hello World!</p>
+    </div>
+    <
 
   </body>
 
