--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   </header>
 
   <body>
-
     <div class="container"> </div>
-    div class="header">
+    <div class="header">
       <p>Juan Casas, UNAM <br>
             Facultad de Ciencias<br>
                     CDMX</p>
@@ -21,7 +20,7 @@
     <div class="content">
       <p>Hello World!</p>
     </div>
-    <
+
 
   </body>
 
