Added more sidebar features

--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
   <body>
     <div class="container"> </div>
     <div class="header">
-      <p>Juan Casas, UNAM <br>
+      <a href="" class="logo.square">
+        <img src="http://67.media.tumblr.com/avatar_583ddfe9c1c9_96.png"
+          width="96" height="96" alt="Casas">
+      </a>
+      <p class="info">Juan Casas, UNAM <br>
             Facultad de Ciencias<br>
                     CDMX</p>
-        <p>This is the header.</p>
+        <p class="info">This is the header.</p>
     </div>
     <div class="content">
       <p>Hello World!</p>
