Added more CSS features

--- a/index.html
+++ b/index.html
@@ -5,22 +5,29 @@
     <link rel="stylesheet" href="main.css">
   </head>
 
-  <header>
 
-  </header>
 
   <body>
     <div class="container"> </div>
-    <div class="header">
-      <a href="" class="logo.square">
-        <img src="http://67.media.tumblr.com/avatar_583ddfe9c1c9_96.png"
-          width="96" height="96" alt="Casas">
-      </a>
-      <p class="info">Juan Casas, UNAM <br>
-            Facultad de Ciencias<br>
-                    CDMX</p>
-        <p class="info">This is the header.</p>
-    </div>
+    <header>
+      <div class="header-wrapper">
+        <div class="section.top">
+
+        </div>
+
+        <div class="section.middle">
+          <a href="" class="logo.square">
+            <img src="http://67.media.tumblr.com/avatar_583ddfe9c1c9_96.png"
+              width="96" height="96" alt="Casas">
+          </a>
+          <p class="info">Juan Casas, UNAM <br>
+                Facultad de Ciencias<br>
+                        CDMX</p>
+            <p class="info">This is the header.</p>
+        </div>
+        <div class="cover-image"></div>
+      </div>
+    </header>
     <div class="content">
       <p>Hello World!</p>
     </div>
