Added a bootstrap demo

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     </header>
     <div class="content">
       <p>Hello World!</p>
+
+      <a href="prueba.html">Prueba de bootstrap</p>
     </div>
 
 
