New bootstrap files, added a custom CSS for some parts of the site and a new index.html

--- a/index.html
+++ b/index.html
@@ -8,43 +8,120 @@
     <title>Casas</title>
     <!-- Bootstrap -->
     <link href="resources/css/bootstrap.min.css" rel="stylesheet">
-
-
+    <link href="resources/css/custom.css" rel="stylesheet">
   </head>
 
-
-
   <body>
-    <div class="container"> </div>
     <header>
-      <div class="header-wrapper">
-        <div class="section.top">
-
-        </div>
-
-        <div class="section.middle">
-          <a href="" class="logo.square">
-            <img src="http://67.media.tumblr.com/avatar_583ddfe9c1c9_96.png"
-              width="96" height="96" alt="Casas">
-          </a>
-          <p class="info">Juan Casas, UNAM <br>
-                Facultad de Ciencias<br>
-                        CDMX</p>
-            <p class="info">This is the header.</p>
-        </div>
-        <div class="cover-image"></div>
-      </div>
-    </header>
-    <div class="content">
-      <p>Hello World!</p>
-
-      <a href="prueba.html">Prueba de bootstrap</p>
+      <div class="jumbotron">
+        <div class="container">
+      <h1 style="font-size:70px">Casas</h1>
+      <p>Nuevo blog en construcción.</p>
+      <a href="#"style="float:center">Acerca de Juan Casas.</a>
+    </div>
     </div>
 
+    </header>
+
+    <div class="container">
+
+    <!----Contenedor para las entradas----->
+    <div class="container">
+
+      <!-----Contenedor para el texto completo de la entrada---->
+      <div class="row">
+        <div class="container">
+            <h2 class="blog-title">Ejemplo de un título.</h2>
+            <p>Y así se debería ver un poco de texto en el blog.</p>
+            <img src="https://static.pexels.com/photos/160777/bokeh-blur-yellow-charming-160777.jpeg"
+            style="float:center" alt="Pexels photo" width="720px" height="420px">
+            <p style="font-size:11px;">Así se debe ver una imagen en el blog.</p>
+            <p>Y así debería ser un video de YouTube en el blog.</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Wdjeq9t_YNg" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+
+
+        <div class="row">
+        <div class="container">
+
+          <h2 class="blog-title">"It's Strange"<br>
+              (feat. K.Flay)</h3>
+          <p>
+                Heart been so cold that I don't feel at all<br>
+                Scarred up inside so I built all these walls<br>
+                Head rolling back, but I'm faking the rush<br>
+                Out every night and I'm lonely as fuck<br>
+
+                I make my rules and my own plans<br>
+                I got no room for no man<br>
+                That's my way, that's my way<br>
+                Then I saw you in a dream right<br>
+                I wanna call you, a kind of feeling<br>
+                I can't name, I can't name<br>
+
+                It's strange<br>
+                But I don't need space from you<br>
+                And every single thing you do, I like<br>
+                I've been chased<br>
+                Maybe I just knew I had to wait for you<br>
+                Draw a knife and carve a little space for you<br>
+                It feels nice<br>
+
+                It's strange, but I don't need space from you<br>
+                And every single thing you do, I like<br>
+
+                Opened me up, I let down my defense<br>
+                Swore that I wouldn't go falling again<br>
+                I could be faded with somebody new<br>
+                Rather be sober at home just us two<br>
+
+                I make my rules, and my own plans<br>
+                I got no room for no man<br>
+                That's my way, that's my way<br>
+                Then I saw you in a dream right<br>
+                I wanna call you, I got a feel that<br>
+                I can't name, I can't name<br>
+
+                It's strange<br>
+                But I don't need space from you<br>
+                And every single thing you do, I like<br>
+                I've been chased<br>
+                Maybe I just knew I had to wait for you<br>
+                Draw a knife and carve a little space for you<br>
+                It feels nice<br>
+
+                I make my rules, and my own plans<br>
+                I got no room for no man<br>
+                That's my way, that's my way<br>
+                Then I saw you in a dream right<br>
+                I wanna call you, I kind of feel then<br>
+                I can't name, I can't name<br>
+            </p>
+          </div>
+      </div>
+    </div>
+    </div>
+
+
+  </body>
+
+  <footer>
+
+    <div class="container">
+
+    <p>Ejemplo del pie de página.</p>
+
+      <img style="float:right" src="resources/images/bootstrap-icon.png" width="24" height="24">
+    <p style="float:right;font-size:17px;">Made with &hearts; on <br>
+                                          Bootstrap</p>
+
+          </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="resources/js/bootstrap.min.js"></script>
-  </body>
+
+    </footer
 
 </html>
