Fixed iframe of index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             style="float:center" alt="Pexels photo" width="720px" height="420px">
             <p style="font-size:11px;">Así se debe ver una imagen en el blog.</p>
             <p>Y así debería ser un video de YouTube en el blog.</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Wdjeq9t_YNg" frameborder="0" allowfullscreen></iframe>
+            <iframe  src="https://www.youtube.com/embed/Wdjeq9t_YNg" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
 
@@ -109,12 +109,12 @@
   <footer>
 
     <div class="container">
-
+      <div>
     <p>Ejemplo del pie de página.</p>
-
       <img style="float:right" src="resources/images/bootstrap-icon.png" width="24" height="24">
     <p style="float:right;font-size:17px;">Made with &hearts; on <br>
                                           Bootstrap</p>
+                                        </div>
 
           </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
