--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h2 class="blog-title">Ejemplo de un título.</h2>
             <p>Y así se debería ver un poco de texto en el blog.</p>
             <img src="https://static.pexels.com/photos/160777/bokeh-blur-yellow-charming-160777.jpeg"
-            style="float:center" alt="Pexels photo" width="720px" height="420px">
+            style="float:center" alt="Pexels photo" width="auto" height="auto">
             <p style="font-size:11px;">Así se debe ver una imagen en el blog.</p>
             <p>Y así debería ser un video de YouTube en el blog.</p>
             <iframe  src="https://www.youtube.com/embed/Wdjeq9t_YNg" frameborder="0" allowfullscreen></iframe>
@@ -110,7 +110,7 @@
 
     <div class="container">
       <div>
-    <p>Ejemplo del pie de página.</p>
+    <p style="float:left">Ejemplo del pie de página.</p>
       <img style="float:right" src="resources/images/bootstrap-icon.png" width="24" height="24">
     <p style="float:right;font-size:17px;">Made with &hearts; on <br>
                                           Bootstrap</p>
