--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
 
     <!----Contenedor para las entradas----->
-    <div class="container">
+    <div class="container" style="padding-left:350px;padding-right:100px;">
 
       <!-----Contenedor para el texto completo de la entrada---->
       <div class="row">
@@ -34,7 +34,7 @@
             <h2 class="blog-title">Ejemplo de un título.</h2>
             <p>Y así se debería ver un poco de texto en el blog.</p>
             <img src="https://static.pexels.com/photos/160777/bokeh-blur-yellow-charming-160777.jpeg"
-            style="float:center" alt="Pexels photo" width="360" height="180">
+            style="float:center" alt="Pexels photo" height="240">
             <p style="font-size:11px;">Así se debe ver una imagen en el blog.</p>
             <p>Y así debería ser un video de YouTube en el blog.</p>
             <iframe  src="https://www.youtube.com/embed/Wdjeq9t_YNg" frameborder="0" allowfullscreen></iframe>
