--- a/edd.html
+++ b/edd.html
@@ -324,6 +324,7 @@
             <text font-family='sans-serif' font-size='12' x='425.000000' y='230.000000' text-anchor='middle' fill='white'>5</text>
             </g>
         </svg>
+        <p>Gracias Palmerin</p>
     </div>
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
